# kojacoord

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  cliff.toml  deny.toml
.github/workflows/: bump-version.yml  ci.yml  release.yml  security.yml
Formula/: kojacoord-proxy.rb
bucket/: kojacoord-proxy.json
cargo-kpl/: Cargo.toml
cargo-kpl/src/: main.rs
crates/anticheat/: Cargo.toml
crates/anticheat/src/: checks.rs  packet_parser.rs
crates/api/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  lib.rs  mojang_lookup.rs  pipeline.rs  property_sig.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: coordination.rs
crates/config/: Cargo.toml  default_config.toml
crates/config/src/: lib.rs
crates/dashboard-api/src/: auth.rs  config.rs  error.rs
crates/dashboard-api/src/routes/: console.rs  events.rs  files.rs  login.rs  players.rs  templates.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: analytics.rs  collector.rs  exporter.rs  lib.rs
crates/netty/: Cargo.toml
crates/netty/src/: error.rs  frame.rs  handlers.rs
crates/plugin-abi/: Cargo.toml
crates/plugin-abi/src/: lib.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/plugin-system/: Cargo.toml
crates/plugin-system/src/: api.rs  integrity.rs  lib.rs  loader.rs  manager.rs  native_loader.rs  sandbox.rs  wasm_loader.rs
crates/protocol/: Cargo.toml
crates/protocol/data/: dimension_codec_1_16_2.LICENSE.md
crates/protocol/src/: codec.rs  dimension_codec.rs  lib.rs  negotiation.rs  registry.rs
crates/protocol/src/types/: flattening.rs  mod.rs  nbt.rs  nbt_snbt.rs  var_int.rs
crates/protocol/src/versions/v1_12_x/login/: mod.rs
crates/protocol/src/versions/v1_12_x/play/: mod.rs
crates/protocol/src/versions/v1_16_x/play/: mod.rs
crates/protocol/src/versions/v1_20_4/login/: mod.rs
crates/protocol/src/versions/v1_20_4/play/: mod.rs
crates/protocol/src/versions/v1_20_x/play/: mod.rs
crates/protocol/src/versions/v1_21_x/login/: mod.rs
crates/protocol/src/versions/v1_21_x/play/: mod.rs
crates/protocol/src/versions/v1_6_x/handshake/: mod.rs
crates/protocol/src/versions/v1_6_x/login/: mod.rs
crates/protocol/src/versions/v1_6_x/play/: mod.rs
crates/protocol/src/versions/v1_6_x/status/: mod.rs
crates/protocol/src/versions/v1_7_x/login/: mod.rs
crates/protocol/src/versions/v1_8/status/: mod.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: buffer_pool.rs  chat_signing.rs  config_synthesis.rs  cookies_transfers.rs  crash_report.rs  lib.rs  proxy.rs  session.rs  telemetry.rs  version_check.rs
crates/proxy-core/src/control_plane/: mod.rs
crates/proxy-core/src/data/: db.rs  mod.rs  permissions.rs
crates/proxy-core/src/features/: commands.rs  exploit_guard.rs  server_selector.rs
crates/proxy-core/src/net/: connection.rs  connection_throttle.rs  limbo.rs  login_packets.rs  mod.rs  packet_builder.rs  packet_io.rs  plugin_channel_rate_limit.rs  proxy_protocol.rs  registry_data.rs  relay.rs
crates/proxy-core/src/net/converter/: chunk_repack.rs  items.rs  mod.rs  modern_to_v1_8.rs  safe.rs  v1_12_2_to_v1_16_5.rs  v1_12_2_to_v1_6_4.rs  v1_16_5_to_v1_12_2.rs  v1_20_4_to_v1_16_5.rs  v1_6_4_to_v1_12_2.rs  v1_6_4_to_v1_16_5.rs  v1_7_to_v1_8.rs  v1_8_to_modern.rs
crates/proxy-core/src/net/limbo_packets/: mod.rs  v1_12.rs  v1_16.rs  v1_19.rs  v1_20.rs  v1_21.rs  v1_6.rs
crates/proxy-core/src/protocol/: coverage.rs  dimension_codec.rs  mod.rs
crates/proxy-core/src/realms/: api.rs  config.rs  credentials.rs  login.rs  mod.rs  wire.rs
crates/proxy-core/src/security/: encryption.rs
crates/proxy-core/src/services/: http_api.rs  mod.rs  server_management.rs
dashboard-ui/: package-lock.json  package.json
docs/: Usage.md
docs/plugins/: PacketHooks.md
k8s/: configmap.yaml  deployment.yaml  secret.yaml
patches/: 0001-feat-proxy-hardening-graceful-shutdown-handshake-kee.patch  command_switch_bugfix.patch  server_switch_bugfix.patch
src/: main.rs
tools/registry-gen/: README.md  conv_nbt.py  gen_registries.py  gen_registries_filtered.py
