[package]
name = "cargo-kpl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Cargo subcommand to build, package and bundle Kojacoord proxy plugins (.kpl archives)."
documentation = "https://docs.rs/cargo-kpl"
keywords = ["cargo", "minecraft", "plugin", "proxy", "kojacoord"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-kpl"
path = "src/main.rs"

# cargo-binstall: `cargo binstall cargo-kpl`. The release currently only ships a
# Linux x86_64 build of the plugin builder; add more targets here as the release
# matrix grows.
[package.metadata.binstall]
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-kpl-linux-x86_64"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
zip = "0.6"
walkdir = "2"
