[package]
name = "kojacoord-anticheat"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
kojacoord-protocol = { path = "../protocol" }
kojacoord-config = { path = "../config" }
lazy_static = "1"
bytes = { workspace = true }
dashmap = { workspace = true }
