[package]
name = "kojacoord-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Minecraft session authentication and packet encryption (Mojang/Yggdrasil, AES-CFB8) for the Kojacoord proxy."

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true, features = ["oid"] }
md-5 = { workspace = true }
aes = { workspace = true }
cfb-mode = { workspace = true }
cipher = "0.4"
hmac = { workspace = true }
sha2 = "0.10"
hex = { workspace = true }
base64 = "0.22.1"
pkcs8 = "0.10"
kojacoord-protocol = { path = "../protocol", version = "0.1.0" }
