[package]
name = "kojacoord-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Redis-backed clustering, cross-node session state and orchestration for the Kojacoord proxy."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.27", features = ["tokio-comp"] }
