[package]
name = "kojacoord-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
figment = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
