[package]
name = "kojacoord-netty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Async Minecraft framing, compression and encryption codec layer for the Kojacoord proxy."

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
aes = { workspace = true }
cfb-mode = { workspace = true }
cipher = "0.4"
kojacoord-protocol = { path = "../protocol", version = "0.1.0" }
