[package]
name = "kojacoord-plugin-system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Dynamic plugin loading, lifecycle and host API for the Kojacoord Minecraft proxy."
documentation = "https://docs.rs/kojacoord-plugin-system"
keywords = ["minecraft", "proxy", "plugin", "kojacoord", "extensibility"]
categories = ["game-development", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
libloading = "0.8"
log = "0.4"
bytes = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Authorization", "Win32_Security", "Win32_System_Threading"] }
