[package]
name = "kojacoord-proxy-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rsa = { workspace = true }
reqwest = { workspace = true }
kojacoord-protocol = { path = "../protocol" }
kojacoord-netty = { path = "../netty" }
kojacoord-auth = { workspace = true }
kojacoord-config = { path = "../config" }
kojacoord-api = { path = "../api" }
kojacoord-plugin-system = { path = "../plugin-system" }
kojacoord-cluster = { path = "../cluster" }
kojacoord-metrics = { path = "../metrics" }
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { workspace = true }
base64 = { workspace = true }
flate2 = "1"
lazy_static = "1"
dashmap = { workspace = true }
aes = { workspace = true }
aes-gcm = "0.10"
cfb-mode = { workspace = true }
cfb8 = "0.8"
cipher = "0.4"
chacha20poly1305 = "0.10"
rand = "0.8"
aead = "0.5"
# Post-quantum KEM (ML-KEM / FIPS 203). Optional: pulled in only with the
# `post-quantum` feature. 0.2.x tracks rand_core 0.6, matching the rand 0.8
# stack used elsewhere in this crate.
ml-kem = { version = "0.2", optional = true }
sqlx = { version = "0.8", features = ["mysql", "sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
tokio-stream = "0.1"
crossbeam-queue = "0.3.12"
notify = "6.1.1"
arc-swap = "1.7.1"
ipnet = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Crash-report memory map (loaded modules) + process/system memory figures.
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
] }

[features]
# Enables the ML-KEM-768 (FIPS 203) + AES-256-GCM hybrid cipher in
# `security::encryption`. Off by default because it pulls in the `ml-kem`
# dependency and the PQ algorithm set is still maturing.
post-quantum = ["dep:ml-kem"]

[build-dependencies]
anyhow = "1"
tonic-build = "0.11"
